--- a/raspberry/system-root/etc/openhab2/services/mysql.cfg
+++ b/raspberry/system-root/etc/openhab2/services/mysql.cfg
@@ -1,5 +1,5 @@
 # the database url like 'jdbc:mysql://<host>:<port>/<database>' (without quotes)
-url=jdbc:mysql://localhost/openhab
+url=jdbc:mysql://localhost/OH_phytotron
 
 # the database user
 user=phytotron
