add password for mqtt connection

--- a/raspberry/system-root/etc/openhab2/services/mqtt.cfg
+++ b/raspberry/system-root/etc/openhab2/services/mqtt.cfg
@@ -8,7 +8,7 @@ local_mqtt.url=tcp://localhost:1883
 
 # Optional. Client id (max 23 chars) to use when connecting to the broker.
 # If not provided a default one is generated.
-local_mqtt.clientId=OpenHab2
+local_mqtt.clientId=OpenHab_OHP
 
 # Optional. User id to authenticate with the broker.
 local_mqtt.user=phytotron
