--- a/arduino/libraries/msgSerial/library.properties
+++ b/arduino/libraries/msgSerial/library.properties
@@ -1,9 +1,9 @@
 name=msgSerial
-version=0.2.0
+version=1.1.0
 author=nono
 maintainer=nono
 sentence=parse serial
 paragraph=parse serial
 category=Signal Input/Output
-url=https://github.com/CrazyFraug/NotHere.git
+url=https://github.com/Artilect-BioTronic/phytotron-rpi/tree/master/arduino/libraries/msgSerial
 architectures=*
